--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: #204f7a;">
 
-    <script src="./bundle.js"></script>
+<script src="./bundle.js"></script>
 </body>
 </html>
