--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Game Tanks</title>
+    <link rel="stylesheet" href="./src/style/index.css">
 </head>
-<body style="background-color: #204f7a;">
-
-<script src="./bundle.js"></script>
+<body>
 </body>
 </html>
